# Design-and-Implementation-of-VR-Model-Simplification-Program

./: CMakeLists.txt  README.md  simplify.cpp
include/: half_edge.hpp  mesh.hpp
resources/: mug.mtl  mug_simplify.mtl  newChimney.mtl  woman.mtl  woman_simplify.mtl  yogurt_simplify.mtl
src/: half_edge.cpp  mesh.cpp
